# freshly-picked

./: .gitignore  CLAUDE.md  render.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/v1/: episodes.py  health.py  recommendations.py  router.py
backend/app/ingestion/: cleanup.py  cli.py  importer.py  loader.py  schemas.py  wipe.py
backend/app/models/: __init__.py  category.py  episode.py  host.py  recommendation.py  recommendation_tag.py  tag.py
backend/app/repositories/: episode_repository.py  recommendation_repository.py
backend/app/schemas/: episode.py  recommendation.py
backend/app/storage/: s3.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 1a0c05afa462_initial.py  21d1480bb29d_add_core_data_models.py
context/: coding-standards-backend.md  coding-standards-frontend.md  current-feature.md  project-overview.md
context/data/: harvard_after_hours_picks.json
docs/execution/: README.md
docs/execution/sprint-01-foundation/: 01_backend_setup.md  02_database_setup.md  03_data_models.md  04_s3_setup.md  05_mobile_setup.md  06_ingestion_cli_base.md
docs/execution/sprint-02-core-product/: 01_ingestion_upsert.md  02_catalog_api.md  03_home_screen.md  03_home_screen_uplift.md  04_recommendation_detail_api.md  05_api_swagger.md  05_recommendation_detail_screen.md  (+2 more)
mobile/: .env.example  .gitignore  App.tsx  CheckList.md  EAS_SETUP.md  MIGRATION_NOTES.md  README.md  Running.md  app.json  eas.json  package-lock.json  package.json
mobile/ios/: Podfile
(+41 files in other folders)
