[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freshly-picked-backend"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "sqlmodel==0.0.22",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "boto3==1.35.86",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
